@@ -1,0 +1,54 @@
+root:x:0:
+daemon:x:1:
+bin:x:2:
+sys:x:3:
+adm:x:4:
+tty:x:5:
+disk:x:6:
+lp:x:7:lp
+mail:x:8:
+news:x:9:
+uucp:x:10:
+proxy:x:13:
+kmem:x:15:
+dialout:x:20:
+fax:x:21:
+voice:x:22:
+cdrom:x:24:dave
+floppy:x:25:
+tape:x:26:smith,tony,dave,bill,mike
+sudo:x:27:
+audio:x:29:dave
+dip:x:30:tony
+postgres:x:32:jones
+www-data:x:33:
+backup:x:34:
+operator:x:37:
+list:x:38:
+irc:x:39:
+src:x:40:dave
+gnats:x:41:
+shadow:x:42:
+utmp:x:43:bill
+video:x:44:bill
+staff:x:50:bill
+games:x:60:
+scanner:x:70:dave
+users:x:100:
+nogroup:x:65534:
+dave:x:1000:
+lpadmin:x:101:
+man:*:12:
+sasl:*:45:
+crontab:x:102:
+ssh:x:103:
+camera:x:105:dave
+plugdev:*:46:
+Debian-exim:x:107:
+webadmin:x:1001:dave,www-data,fred
+mysql:x:108:bill
+archive:x:1003:archive,dave
+messagebus:x:109:
+fuse:x:110:dave
+ssl-cert:x:113:postgres
+ARMBOOT:x:1006:fred
