@@ -1,3 +1,10 @@
+Sat Dec 20 14:34:20 CET 2008  Theo Markettos <theo@markettos.org.uk>
+
+	* grp/getgrouplist.c(getgrouplist): Added.
+	* test/grp/getgrouplist.c,test/grp/test.group: Added test application
+	for getgrouplist code.
+	* include/grp.h(getgrouplist): Added prototype.
+
 Thu Dec 18 22:57:28 CET 2008  John Tytgat  <John.Tytgat@aaug.net>
 
 	* unix/syslog.c(vsyslog): More sensible mapping between Unix and
